MH-7644 bad alignment fix upload ui
git-svn-id: https://opencast.jira.com/svn/MH/trunk@10403 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/modules/matterhorn-admin-ui/src/main/resources/ui/css/admin.css
+++ b/modules/matterhorn-admin-ui/src/main/resources/ui/css/admin.css
@@ -125,6 +125,7 @@ table#agentsTable th, table#seriesTable th, table#recordingsTable th, table#stat
 #i18n_additional, .fold_icon_text { padding-top: 2px; float: left; }
 .oc-ui-collapsible-widget .form-box-head { cursor: pointer; }
 .ui-datepicker-trigger { vertical-align: middle; }
+#hold-ul li { padding-left: 175px; }
 
 /* Error */
 
